@@ -3,6 +3,11 @@
 	* src/cerebrod/cerebrod_listener.c
 	(_cerebrod_listener_create_and_setup_socket): Fix bind error,
 	remove unnecessary setsockopt call.
+
+	* src/cerebrod/cerebrod_listener.c (cerebrod_listener): Add
+	additional parallelism.
+
+	* src/cerebrod/cerebrod.c (main): Fix listener corner case.
 	
 2005-02-15  Albert Chu  <chu11@llnl.gov>
 
